--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :na,e %><br>
-    <%= f.text_field :na,e %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
