--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Na,e</th>
+      <th>Name</th>
       <th>Price</th>
       <th colspan="3"></th>
     </tr>
