--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Name</th>
       <th>Price</th>
       <th colspan="3"></th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @items.each do |item| %>
       <tr>
+        <td><%= link_to item.id, item_path(item) %></td>
         <td><%= item.name %></td>
         <td><%= item.price %></td>
         <td><%= link_to 'Show', item %></td>
