--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Shopping List</a>
+  <div class="collapse navbar-collapse">
+    <div class="navbar-nav">
+      <%= link_to 'Itens', items_path, class: 'nav-item nav-link' %>
+      <%= link_to 'Shopping_Lists', item_shopping_lists_path(@item), class: 'nav-item nav-link' %>
+    </div>
+  </div>
+</nav>
+  <main class="container" role="main">
 
 <%= yield %>
 
+      </div>
+    </div>
+  </div>
 </body>
 </html>
