--- a/app/views/shopping_lists/_form.html.erb
+++ b/app/views/shopping_lists/_form.html.erb
@@ -13,7 +13,8 @@
 
   <div class="field">
     <%= f.label :item_id %><br>
-    <%= f.text_field :item_id %>
+    <%= f.colection_select :item_id, @items, :id, :name %>
+
   </div>
   <div class="field">
     <%= f.label :bought %><br>
