--- a/app/views/shopping_lists/index.html.erb
+++ b/app/views/shopping_lists/index.html.erb
@@ -16,8 +16,8 @@
       <tr>
         <td><%= shopping_list.item %></td>
         <td><%= shopping_list.bought %></td>
-        <td><%= link_to 'Show', shopping_list %></td>
-        <td><%= link_to 'Edit', edit_shopping_list_path(shopping_list) %></td>
+        <td><%= link_to 'Show', item_shopping_list_path(@item) %></td>
+        <td><%= link_to 'Edit', edit_item_shopping_list_path(@item, shopping_list) %></td>
         <td><%= link_to 'Destroy', shopping_list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
