--- a/app/views/shopping_lists/show.html.erb
+++ b/app/views/shopping_lists/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Item:</strong>
-  <%= @shopping_list.item %>
+  <%= @shopping_list.item.name %>
 </p>
 
 <p>
@@ -10,5 +10,5 @@
   <%= @shopping_list.bought %>
 </p>
 
-<%= link_to 'Edit', edit_shopping_list_path(@shopping_list) %> |
-<%= link_to 'Back', shopping_lists_path %>
+<%= link_to 'Edit', edit_item_shopping_list_path(@item, shopping_list) %> |
+<%= link_to 'Back', item_shopping_lists_path(@item) %>
